Fix wms-14327 issue related to horizontal scroll once chip tags are added.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1046,6 +1046,10 @@ html, body {
         .app-textbox {
           height: 28px;
         }
+        &.app-search {
+          width: auto;
+          min-width: 10em;
+        }
       }
     }
     &.chip-placeholder {
